# ios-sysdiagnose-dashboard-skill

./: .gitignore  404.html  CHANGELOG.md  HANDOFF.md  LICENSE  README.md  README_zh.md  SKILL.md  _meta.json  analyze.sh  fix_pwa.mjs  index.html  manifest.json  package-lock.json  package.json  pyproject.toml  sw.js
references/: features.md
scripts/: __init__.py  extract.mjs  extract.py  package-lock.json  package.json  report.mjs  report.py  split.js
tests/: test_extract.py
web/: build.js  extract.js  vfs.js
